Adición sección #clients en home page owl carousel

--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,7 @@
 	--color-hover-morado:#705cf4;
 	--color-input: #eff4fa;
 	--color-letra-input:#1d2124;
+	--fondo-azul:#f5f9ff;
 }
 @font-face{
 	font-family: "Anta";
@@ -93,6 +94,13 @@ header{
 	font-size: 45px;
 	color: var(--color-negro);
 }
+.subtitulos{
+	padding-left: 15%;
+	padding-right: 15%;
+	text-align: center;
+	margin-top: 25px;
+}
+
 
 .ps-3{
 	padding-left: 50px !important;
@@ -207,6 +215,44 @@ footer ul{
 footer li{
 	margin-bottom: 10px;
 }
+
+
+#clients{
+	background-color: var(--fondo-azul);
+}
+.testimonial{
+	background-color: #fff;
+	padding: 20px 35px;
+	transition: all 0.5s ease-in-out;
+}
+
+.testimonial img{
+	width: 100px !important;
+	border-radius: 100%;
+	margin: auto;
+	margin-top: -80px;
+	margin-bottom: 30px;
+}
+.testimonial h4{
+	text-align: end;
+	font-size: 18px;
+}
+
+#clients .owl-stage-outer{
+	padding-top: 80px;
+}
+
+.testimonial:hover{
+	transform: translateY(-20px);
+	transition: all 0.5s ease-in-out;
+}
+
+
+
+
+
+
+
 
 
 
