--- a/css/bootstrap-custom.css
+++ b/css/bootstrap-custom.css
@@ -104,15 +104,17 @@ a{
 .carousel .carousel-item {
   	height: 500px;
 }
-.carousel-item img {
+.carousel-item > img {
     position: absolute;
     object-fit:cover;
     top: 0;
     left: 0;
     min-height: 500px;
 }
-
-
+.carousel-caption img{
+	margin: auto;
+	margin-bottom: 20px;
+}
 
 
 
